--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
     "isomorphic-unfetch": "^3.0.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
-    "react-hot-loader": "^3.0.0-beta.6"
+    "react-hot-loader": "^3.0.0-beta.6",
+    "styled-components": "^4.1.2"
   },
   "devDependencies": {
     "babel-plugin-transform-async-to-generator": "^6.24.1",
