--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-hot-loader": "^4.3.12",
+    "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.2"
   },
   "devDependencies": {
