--- a/package.json
+++ b/package.json
@@ -1,19 +1,40 @@
 {
   "name": "nature-remo-macos",
-  "productName": "nature-remo-macos",
+  "description": "Nature Remo for macOS",
   "version": "1.0.0",
-  "description": "My Electron application description",
+  "author": "uetchy",
   "main": "src/index.js",
   "scripts": {
-    "start": "electron-forge start",
-    "package": "electron-forge package",
+    "lint": "eslint --cache --color --ext .jsx,.js src",
     "make": "electron-forge make",
+    "package": "electron-forge package",
     "publish": "electron-forge publish",
-    "lint": "eslint --cache --color --ext .jsx,.js src"
+    "start": "electron-forge start"
   },
-  "keywords": [],
-  "author": "uetchy",
-  "license": "MIT",
+  "dependencies": {
+    "electron-compile": "^6.4.3",
+    "electron-devtools-installer": "^2.1.0",
+    "electron-squirrel-startup": "^1.0.0",
+    "nature-remo": "^0.3.0",
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2",
+    "react-hot-loader": "^4.6.3",
+    "react-router-dom": "^4.3.1",
+    "styled-components": "^4.1.2"
+  },
+  "devDependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-es2015-classes": "^6.24.1",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-react": "^6.24.1",
+    "electron-forge": "^5.2.3",
+    "electron-prebuilt-compile": "4.0.0",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.12.3"
+  },
   "config": {
     "forge": {
       "make_targets": {
@@ -37,8 +58,8 @@
       "electronInstallerDebian": {},
       "electronInstallerRedhat": {},
       "github_repository": {
-        "owner": "",
-        "name": ""
+        "owner": "uetchy",
+        "name": "nature-remo-macos"
       },
       "windowsStoreConfig": {
         "packageName": "",
@@ -46,28 +67,9 @@
       }
     }
   },
-  "dependencies": {
-    "electron-compile": "^6.4.3",
-    "electron-devtools-installer": "^2.1.0",
-    "electron-squirrel-startup": "^1.0.0",
-    "nature-remo": "^0.3.0",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-hot-loader": "^4.6.3",
-    "react-router-dom": "^4.3.1",
-    "styled-components": "^4.1.2"
-  },
-  "devDependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-es2015-classes": "^6.24.1",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "electron-forge": "^5.2.3",
-    "electron-prebuilt-compile": "3.0.10",
-    "eslint": "^5.10.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7"
-  }
+  "keywords": [
+    "nature-remo"
+  ],
+  "license": "MIT",
+  "productName": "Nature Remo"
 }
