--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "electron-devtools-installer": "^2.1.0",
     "electron-squirrel-startup": "^1.0.0",
     "nature-remo": "^0.3.0",
-    "react": "^16.7.0-alpha.2",
-    "react-dom": "^16.7.0-alpha.2",
-    "react-hot-loader": "^4.6.3",
+    "react": "^16.8.2",
+    "react-dom": "^16.8.2",
+    "react-hot-loader": "^4.6.5",
     "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.2"
   },
@@ -27,13 +27,13 @@
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "electron-forge": "^5.2.3",
+    "electron-forge": "^5.2.4",
     "electron-prebuilt-compile": "4.0.0",
-    "eslint": "^5.12.0",
+    "eslint": "^5.14.0",
     "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.12.3"
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.12.4"
   },
   "config": {
     "forge": {
