--- a/package.json
+++ b/package.json
@@ -19,57 +19,39 @@
     "nature-remo": "^0.3.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.8.0",
+    "react-hot-loader": "^4.8.4",
     "react-router-dom": "^5.0.0",
     "styled-components": "^4.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@electron-forge/cli": "6.0.0-beta.34",
+    "@electron-forge/maker-deb": "6.0.0-beta.34",
+    "@electron-forge/maker-rpm": "6.0.0-beta.34",
+    "@electron-forge/maker-squirrel": "6.0.0-beta.34",
+    "@electron-forge/maker-zip": "6.0.0-beta.34",
+    "@electron-forge/plugin-webpack": "^6.0.0-beta.34",
+    "@webpack-cli/init": "^0.1.5",
+    "babel-loader": "^8.0.5",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-es2015-classes": "^6.24.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "electron-forge": "^5.2.4",
+    "electron": "4.1.3",
     "electron-prebuilt-compile": "4.0.0",
     "eslint": "^5.15.3",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.16.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.12.4"
+    "eslint-plugin-react": "^7.12.4",
+    "uglifyjs-webpack-plugin": "^2.1.2",
+    "webpack": "^4.29.6",
+    "webpack-cli": "^3.3.0"
   },
   "bugs": {
     "url": "https://github.com/uetchy/nature-remo-macos/issues"
-  },
-  "config": {
-    "forge": {
-      "make_targets": {
-        "win32": [
-          "squirrel"
-        ],
-        "darwin": [
-          "zip"
-        ],
-        "linux": [
-          "deb",
-          "rpm"
-        ]
-      },
-      "electronPackagerConfig": {
-        "packageManager": "yarn"
-      },
-      "electronWinstallerConfig": {
-        "name": "nature_remo_macos"
-      },
-      "electronInstallerDebian": {},
-      "electronInstallerRedhat": {},
-      "github_repository": {
-        "owner": "uetchy",
-        "name": "nature-remo-macos"
-      },
-      "windowsStoreConfig": {
-        "packageName": "",
-        "name": "natureremomacos"
-      }
-    }
   },
   "homepage": "https://github.com/uetchy/nature-remo-macos",
   "keywords": [
