--- a/package.json
+++ b/package.json
@@ -20,24 +20,29 @@
     "test": "craco test"
   },
   "dependencies": {
-    "@craco/craco": "^5.0.2",
+    "@craco/craco": "^5.2.1",
+    "@types/react": "^16.8.19",
     "electron-is-dev": "^1.1.0",
-    "nature-remo": "^0.3.1",
+    "nature-remo": "^1.0.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.1",
     "react-tippy": "^1.2.3",
-    "styled-components": "^4.2.0"
+    "styled-components": "^4.2.1"
   },
   "devDependencies": {
-    "electron": "^5.0.1",
-    "electron-builder": "^20.40.2",
-    "husky": "^2.2.0",
+    "@types/history": "^4.7.2",
+    "@types/react-dom": "^16.8.4",
+    "@types/react-router-dom": "^4.3.3",
+    "@types/styled-components": "^4.1.15",
+    "electron": "^5.0.2",
+    "electron-builder": "^20.41.0",
+    "husky": "^2.3.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^1.17.1",
-    "pretty-quick": "^1.10.0",
-    "typescript": "^3.4.5",
+    "pretty-quick": "^1.11.0",
+    "typescript": "^3.5.0",
     "wait-on": "^3.2.0"
   },
   "browserslist": {
