--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "nature-remo-macos",
   "description": "Nature Remo for macOS",
   "version": "1.0.0",
+  "author": {
+    "name": "Yasuaki Uechi",
+    "email": "y@uechi.io"
+  },
   "scripts": {
     "build": "craco build",
     "dev:cra": "BROWSER=none craco start",
@@ -14,31 +18,31 @@
     "test": "craco test"
   },
   "dependencies": {
-    "@craco/craco": "^5.6.2",
-    "@types/react": "^16.9.17",
-    "electron-is-dev": "^1.1.0",
-    "nature-remo": "^1.0.3",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-icons": "^3.8.0",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
-    "react-tippy": "^1.3.1",
-    "styled-components": "^4.4.1"
+    "@craco/craco": "^5.6.4",
+    "@types/react": "^16.9.44",
+    "electron-is-dev": "^1.2.0",
+    "nature-remo": "^1.2.3",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1",
+    "react-tippy": "^1.4.0",
+    "styled-components": "^5.1.1"
   },
   "devDependencies": {
-    "@types/history": "^4.7.3",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/styled-components": "^4.4.1",
-    "electron": "^7.2.4",
-    "electron-builder": "^21.2.0",
-    "husky": "^3.1.0",
+    "@types/history": "^4.7.7",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.5",
+    "@types/styled-components": "^5.1.2",
+    "electron": "^9.1.2",
+    "electron-builder": "^22.8.0",
+    "husky": "^4.2.5",
     "npm-run-all": "^4.1.5",
-    "prettier": "^1.19.1",
+    "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
-    "typescript": "^3.7.4",
-    "wait-on": "^3.3.0"
+    "typescript": "^3.9.7",
+    "wait-on": "^5.1.0"
   },
   "main": "public/electron.js",
   "husky": {
@@ -46,12 +50,8 @@
       "pre-commit": "pretty-quick --staged"
     }
   },
-  "author": {
-    "name": "Yasuaki Uechi",
-    "email": "y@uechi.io",
-    "url": "https://uechi.io"
-  },
-  "license": "MIT",
+  "homepage": ".",
+  "license": "Apache-2.0",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -82,6 +82,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": ".",
   "private": true
 }
