--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,6 @@
-/build
+/artifacts
 /dist
 .vscode/settings.json
-yarn.lock
 
 # Created by https://www.gitignore.io/api/node
 # Edit at https://www.gitignore.io/?templates=node
