--- a/package.json
+++ b/package.json
@@ -1,55 +1,69 @@
 {
   "name": "nature-remo-macos",
   "description": "Nature Remo for macOS",
-  "version": "1.0.0",
+  "version": "0.0.0",
   "author": {
     "name": "Yasuaki Uechi",
     "email": "y@uechi.io"
   },
   "scripts": {
-    "build": "craco build && electron-builder --dir",
+    "build": "concurrently 'npm:build:*'",
+    "build:main": "cross-env NODE_ENV=production webpack --config webpack.main.js",
+    "build:renderer": "cross-env NODE_ENV=production webpack --config webpack.renderer.js",
     "dev": "concurrently -k 'npm:dev:*'",
-    "dev:cra": "BROWSER=none craco start",
-    "dev:electron": "wait-on http://localhost:3000 && electron .",
-    "eject": "craco eject",
+    "dev:electron": "wait-on dist/main.js http://localhost:8090 && electron .",
+    "dev:main": "webpack --config webpack.main.js --watch",
+    "dev:renderer": "webpack-dev-server --config webpack.renderer.js",
     "package": "electron-builder -m",
     "postinstall": "electron-builder install-app-deps",
-    "prepackage": "npm run build",
-    "start": "npm run dev",
-    "test": "craco test"
+    "prepackage": "npm run build"
   },
   "dependencies": {
-    "@craco/craco": "^5.6.4",
-    "@types/react": "^16.9.45",
     "electron-is-dev": "^1.2.0",
     "nature-remo": "^1.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1",
     "react-tippy": "^1.4.0",
-    "styled-components": "^5.1.1"
+    "styled-components": "^5.1.1",
+    "update-electron-app": "^1.5.0"
   },
   "devDependencies": {
     "@types/history": "^4.7.7",
+    "@types/node": "^12.12.6",
+    "@types/react": "^16.9.45",
     "@types/react-dom": "^16.9.8",
     "@types/react-router-dom": "^5.1.5",
     "@types/styled-components": "^5.1.2",
     "concurrently": "^5.3.0",
+    "copy-webpack-plugin": "^6.0.3",
+    "cross-env": "^7.0.2",
     "electron": "^9.2.0",
     "electron-builder": "^22.8.0",
+    "html-webpack-plugin": "^4.3.0",
     "husky": "^4.2.5",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "pretty-quick": "^2.0.1",
+    "shx": "^0.3.2",
+    "ts-loader": "^8.0.2",
     "typescript": "^3.9.7",
-    "wait-on": "^5.1.0"
+    "wait-on": "^5.1.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpackbar": "^4.0.0"
   },
-  "main": "public/electron.js",
+  "main": "dist/main.js",
   "husky": {
     "hooks": {
       "pre-commit": "pretty-quick --staged"
     }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/uetchy/nature-remo-macos"
   },
   "homepage": "https://github.com/uetchy/nature-remo-macos",
   "license": "Apache-2.0",
@@ -66,18 +80,17 @@
     ]
   },
   "build": {
-    "appId": "io.uechi.nature-remo-macos",
+    "appId": "io.uechi.${name}",
     "productName": "Nature Remo",
-    "copyright": "Copyright © 2020 ${author}",
     "mac": {
       "category": "public.app-category.utilities"
     },
     "files": [
-      "node_modules/",
-      "package.json"
+      "dist"
     ],
     "directories": {
-      "buildResources": "assets"
+      "output": "artifacts",
+      "buildResources": "buildResources"
     }
   },
   "eslintConfig": {
