--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "build": "concurrently 'npm:build:*'",
     "build:main": "cross-env NODE_ENV=production webpack --config webpack.main.js",
     "build:renderer": "cross-env NODE_ENV=production webpack --config webpack.renderer.js",
+    "clean": "shx rm -rf artifacts dist *.log",
     "dev": "concurrently -k 'npm:dev:*'",
     "dev:electron": "wait-on dist/main.js http://localhost:8090 && electron .",
     "dev:main": "webpack --config webpack.main.js --watch",
     "dev:renderer": "webpack-dev-server --config webpack.renderer.js",
     "package": "electron-builder -m",
     "postinstall": "electron-builder install-app-deps",
-    "prepackage": "npm run build",
+    "prepackage": "npm run clean && npm run build",
     "release": "release-it"
   },
   "dependencies": {
